--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <string name="app_name">Coffee App</string>
+    <string name="app_name">LAB_WEEK_04</string>
     <string name="app_title">Coffee App</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="menu_coffee">Coffee List</string>
@@ -19,6 +19,10 @@
     <string name="starbucks_title">STARBUCKS</string>
     <string name="janjijiwa_title">JANJI JIWA</string>
     <string name="kopikenangan_title">KOPI KENANGAN</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <!-- Assignment -->
+    <string name="starbucks_desc">Starbucks Corporation is an American multinational chain of coffeehouses and roastery reserves headquartered in Seattle, Washington. It is the world\'s largest coffeehouse chain.</string>
+    <string name="janjijiwa_desc">It is undeniable that Janji Jiwa outlets have spread to various corners. Janji Jiwa is a local coffee brand that is popular among students, students, workers and even families. Carrying the jargon"coffee from the heart", Janji Jiwa is committed to serving coffee with a classic taste for coffee lovers.</string>
+    <string name="kopikenangan_desc">At Kopi Kenangan, their dream is to serve high quality coffee, made with the freshest local ingredients to customers across Indonesia- and the rest of the world</string>
+        <!-- Other strings -->
+        <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
